--- a/ansible.yaml
+++ b/ansible.yaml
@@ -3,9 +3,9 @@
   - name: copy deployment file to kubernetes master 
     copy:
       src: deployment.yaml
-      dest: /root/
+      dest: /home/ubuntu
   - name: delete the previous of kubernetes objects 
-    command: kubectl delete -f /root/deployment.yaml
+    command: kubectl delete -f /home/ubuntu/deployment.yaml
   - name: Create a Deployment by reading the definition from a local file
-    command: kubectl apply -f /root/deployment.yaml
+    command: kubectl apply -f /home/ubuntu/deployment.yaml
       
